# shapematch

./: README.md  pyproject.toml
data/primitives/: LICENSE.md
data/primitives/cube/: unit_cube.stp  unit_cube_inc1.5.stp  unit_cube_inc1.5_blend.01.stp  unit_cube_inc1.5_blend.03.stp  unit_cube_inc1.5_blend.05.stp  unit_cube_inc1.5_blend.06.stp  unit_cube_inc2.0.stp  unit_cube_inc2.0_blend.01.stp  unit_cube_inc2.0_blend.03.stp  unit_cube_inc2.0_blend.05.stp  unit_cube_inc2.0_blend.06.stp  unit_cube_inc4.0.stp  unit_cube_inc4.0_blend.01.stp  unit_cube_inc4.0_blend.03.stp  unit_cube_inc4.0_blend.05.stp  unit_cube_inc4.0_blend.06.stp  unit_cube_inc8.0.stp  unit_cube_inc8.0_blend.01.stp  unit_cube_inc8.0_blend.03.stp  unit_cube_inc8.0_blend.05.stp  unit_cube_inc8.0_blend.06.stp  unit_cube_x1.5.stp  unit_cube_x1.5_blend.01.stp  unit_cube_x1.5_blend.03.stp  unit_cube_x1.5_blend.05.stp  unit_cube_x1.5_blend.06.stp  unit_cube_x2.0.stp  unit_cube_x2.0_blend.01.stp  unit_cube_x2.0_blend.03.stp  unit_cube_x2.0_blend.05.stp  unit_cube_x2.0_blend.06.stp  unit_cube_x4.0.stp  unit_cube_x4.0_blend.01.stp  unit_cube_x4.0_blend.03.stp  unit_cube_x4.0_blend.05.stp  unit_cube_x4.0_blend.06.stp  unit_cube_x8.0.stp  unit_cube_x8.0_blend.01.stp  unit_cube_x8.0_blend.03.stp  unit_cube_x8.0_blend.05.stp  (+61 more)
data/primitives/cylinder/: unit_cyl.stp  unit_cyl_inc1.5.stp  unit_cyl_inc1.5_blend.01.stp  unit_cyl_inc1.5_blend.03.stp  unit_cyl_inc1.5_blend.05.stp  unit_cyl_inc1.5_blend.06.stp  unit_cyl_inc2.0.stp  unit_cyl_inc2.0_blend.01.stp  unit_cyl_inc2.0_blend.03.stp  unit_cyl_inc2.0_blend.05.stp  unit_cyl_inc2.0_blend.06.stp  unit_cyl_inc4.0.stp  unit_cyl_inc4.0_blend.01.stp  unit_cyl_x1.5.stp  (+129 more)
data/shapeCache/: SSPRcompare_3_10_15_36.iv  unit_cube_x8.0_blend.03_3_10_13_19.iv  unit_cube_x8.0_blend.03_3_10_14_27.iv  unit_sphere_y8.0_3_10_13_27.iv
src/: iv_viewer.py  shapematch.py
(+65 files in other folders)
